--- a/app/src/main/res/layout/find_materials.xml
+++ b/app/src/main/res/layout/find_materials.xml
@@ -2,9 +2,154 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FindMaterialsActivity">
+    android:background="#027550"
+    tools:context="com.example.librarytemi.MainActivity"
+    >
 
-    <!-- Your layout here -->
+    <!-- White horizontal banner at the top -->
+    <LinearLayout
+        android:id="@+id/top_banner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#FFFFFF"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="10dp">
+
+        <!-- Image on the top left corner -->
+
+        <!-- Spacer to push links to the right -->
+
+        <ImageView
+            android:id="@+id/logo_image"
+            android:layout_width="400dp"
+            android:layout_height="161dp"
+            android:contentDescription="@string/uab_logo"
+            android:src="@drawable/uab_logo" />
+
+        <View
+            android:layout_width="1173dp"
+            android:layout_height="187dp"
+            android:layout_weight="1" />
+
+        <!-- Links on the right side -->
+        <TextView
+            android:id="@+id/link1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/about_link"
+            android:textColor="#0000FF"
+            android:padding="8dp" />
+
+        <TextView
+            android:id="@+id/link2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/support_link"
+            android:textColor="#0000FF"
+            android:padding="8dp" />
+
+        <TextView
+            android:id="@+id/link3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/support_link"
+            android:textColor="#0000FF"
+            android:padding="8dp" />
+
+    </LinearLayout>
+
+    <!-- Table layout for buttons -->
+    <TableLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/top_banner"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <!-- First row of buttons -->
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <!-- Find Materials button -->
+            <Button
+                android:id="@+id/search_the_collection_button"
+                style="@style/dashboard_button"
+                android:text="@string/search_collection"
+                app:cornerRadius="30dp"
+                app:strokeColor="#154A3A"
+                app:strokeWidth="3dp" />
+
+            <!-- Borrow and Request button -->
+            <Button
+                android:id="@+id/databases_button"
+                style="@style/dashboard_button"
+                android:text="@string/databases"
+                app:cornerRadius="30dp"
+                app:strokeColor="#154A3A"
+                app:strokeWidth="3dp" />
+
+            <!-- Reserve Space button -->
+            <Button
+                android:id="@+id/ejournals_button"
+                style="@style/dashboard_button"
+                android:text="@string/e_journals"
+                app:cornerRadius="30dp"
+                app:strokeColor="#154A3A"
+                app:strokeWidth="3dp" />
+
+        </TableRow>
+
+        <!-- Second row of buttons -->
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <!-- Research Assistance button -->
+            <Button
+                android:id="@+id/digital_collections_button"
+                style="@style/dashboard_button"
+                android:text="@string/digital_collections"
+                app:cornerRadius="30dp"
+                app:strokeColor="#154A3A"
+                app:strokeWidth="3dp" />
+
+            <!-- Special Collections button -->
+            <Button
+                android:id="@+id/clinical_resources_button"
+                style="@style/dashboard_button"
+                android:text="@string/clinical_resources"
+                app:cornerRadius="30dp"
+                app:strokeColor="#154A3A"
+                app:strokeWidth="3dp" />
+
+            <!-- Events button -->
+            <Button
+                android:id="@+id/request_materials_button"
+                style="@style/dashboard_button"
+                android:text="@string/request_materials"
+                app:cornerRadius="30dp"
+                app:strokeColor="#154A3A"
+                app:strokeWidth="3dp" />
+
+        </TableRow>
+
+    </TableLayout>
+
+    <ImageView
+        android:id="@+id/arrow_png"
+        android:layout_width="123dp"
+        android:layout_height="130dp"
+        android:contentDescription="@string/arrow_png"
+        android:src="@drawable/arrow"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="260dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
